--- a/.env
+++ b/.env
@@ -3,6 +3,6 @@ PORT=4500
 
 SECRET_KEY=SIMNivJAo-TjDTdZh7i_1TJxOonkh
 
-CLOUD_NAME=diljk0gaj,
-API_KEY=942317775952379,
+CLOUD_NAME=diljk0gaj
+API_KEY=942317775952379
 API_SECRET=MGeQUlOo-fGhQaFCy2itFg_Izuc
