--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "i": "^0.3.6",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
+    "moment": "^2.27.0",
     "mongoose": "^5.9.26",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
