--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGODB_URL=mongodb+srv://tcorpinto:ticketscorpinto2019J@cluster0-6enab.mongodb.net/tickets_test?retryWrites=true&w=majority
+MONGODB_URL=mongodb+srv://tcorpinto:ticketscorpinto2019J@cluster0-6enab.mongodb.net/tickets?retryWrites=true&w=majority
 PORT=4500
 
 SECRET_KEY=SIMNivJAo-TjDTdZh7i_1TJxOonkh
