--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-formidable": "^1.2.0",
+    "firebase": "^8.1.1",
     "fs-extra": "^9.0.1",
     "i": "^0.3.6",
     "jsonwebtoken": "^8.5.1",
