--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.19.0",
     "cloudinary": "^1.22.0",
     "cors": "^2.8.5",
+    "currency-formatter": "^1.5.6",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-formidable": "^1.2.0",
